adjust ads position

--- a/huu-ich/cac-loai-bao-hiem/index.html
+++ b/huu-ich/cac-loai-bao-hiem/index.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -283,34 +284,6 @@ data-ad-slot="3830899615">
     <li>yên tâm rằng đã triệt tiêu hết tất cả các nguyên nhân gây hại, không còn rủi ro</li>
   </ul>
 
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <h2>Ý nghĩa của bảo hiểm</h2>
   <p>Về hình thức thì bảo hiểm là một thứ phí giống như phí giữ xe vậy. Ai sợ mất xe thì phải trả phí giữ xe. Ai <b>sợ mất tiền</b> thì trả phí bảo hiểm. Khi bị mất xe thì ta chỉ nhận được bồi thường ít hơn hoặc bằng giá trị chiếc xe, còn bảo hiểm có thể đền số tiền ta đang có và cả số tiền ta chưa có (tức là số tiền sẽ làm ra trong tương lai).</p>
   <p>Khi tham gia bảo hiểm thì mình đóng một khoản phí để khi có rủi ro sẽ nhận được số tiền bảo hiểm. Khoản phí đó dùng để chia sẻ rủi ro giữa những người cùng tham gia bảo hiểm: người gặp rủi ro nhận tiền của những người chưa gặp rủi ro. Mua bảo hiểm mà không gặp rủi ro cũng giống như đem tiền đi làm <a href="/huu-ich/chi-tieu">từ thiện</a>: giúp những người không may.
@@ -378,34 +351,6 @@ data-ad-slot="3830899615">
   <br><a href="phi-bao-hiem-nhan-tho">Tiền đóng vào bảo hiểm</a> còn phải trích một phần cho mục đích chia sẻ rủi ro nữa, nên lợi nhuận chung hơi thấp hơn ngân hàng. Do đó người mua bảo hiểm mà so mức lợi nhuận giữa bảo hiểm và ngân hàng, và <b>quên</b> mục đích bảo hiểm, sẽ hết muốn mua nữa. Người ta quên rằng bảo hiểm và tiết kiệm là hai dịch vụ khác nhau, khó so sánh được. Mua bảo hiểm nhân thọ là dùng hai dịch vụ cùng một lúc.
   <br><b>Đối với những người khó giữ tiền</b>, tuy tiết kiệm bằng bảo hiểm nhân thọ thì lợi nhuận thấp hơn ngân hàng nhưng lại cho <span class="tmark">kết quả tốt hơn ngân hàng</span> vì tiết kiệm bằng bảo hiểm là việc tiết kiệm có kỷ luật: cứ đúng hạn là có người nhắc nộp tiền, không tiện rút ra trước hạn. Tiền ở trong bảo hiểm không định kỳ quay lại tay người chủ như sổ tiết kiệm nên ít bị chi tiêu bất chợt. Nhờ tính kỷ luật đó mà người tham gia bảo hiểm tránh được các cám dỗ tiêu dùng, đỡ quên nộp tiền vào ngân hàng, đỡ rút tiền khi bị khuyến mãi dụ dỗ. Nếu thu nhập của bạn đủ sống mà tài sản của bạn không tăng lên như đồ thị trong trang <a href="../tich-luy">Tích luỹ tài sản</a> thì bạn thuộc nhóm người khó giữ tiền, nhóm đó chiếm hơn 90% dân số Việt Nam.
   <br>Tóm lại, bảo hiểm nhân thọ là một cách tích luỹ tiền có kết quả chắc chắn, vượt qua những thất thoát kiểm soát được (cám dỗ tiêu dùng) cũng như không kiểm soát được (rủi ro).</p>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <h4>Các loại bảo hiểm linh hoạt</h4>
   <p>Những sản phẩm bảo hiểm nhân thọ thiết kế theo kiểu truyền thống (kiểu cũ) thì <i>giá trị hoàn lại</i> gần bằng <i>số tiền bảo hiểm</i> làm cho người tham gia bảo hiểm bị <b>buộc</b> phải tiết kiệm tương đương với số tiền bảo hiểm rủi ro. Sản phẩm kiểu cũ cũng cố định về thời hạn hợp đồng, thời hạn đóng phí.
   <br>Về sau có những sản phẩm <a href="bhnt-lien-ket-chung">bảo hiểm nhân thọ liên kết chung</a>: <i><span class="tmark">linh hoạt</span></i> giữa hai mục đích bảo hiểm và tích luỹ, người tham gia bảo hiểm tự chọn số tiền bảo hiểm và giá trị hoàn lại khác nhau, tự quyết định thời hạn bảo hiểm, thời hạn đóng phí. Khách hàng có thể chọn số tiền bảo hiểm cao và giá trị hoàn lại thấp để đóng phí thấp, phần tiền tiết kiệm còn lại đem gửi vào chỗ nào có lãi suất cao và an toàn. Tất nhiên muốn được tối ưu như vậy thì khách hàng hoặc tư vấn viên tài chính phải thật hiểu về kế hoạch tài chính để chọn đúng kế hoạch <a href="../tich-luy">tích luỹ</a> và kế hoạch bảo hiểm sao cho <i>dù có rủi ro hay không thì gia đình vẫn có đủ số tiền vào lúc cần dùng đến</i>. Nghĩa là phải thực hiện song song hai kế hoạch để có cùng một kết quả như sản phẩm bảo hiểm truyền thống ở trên với số tiền bỏ ra ít hơn.
@@ -453,34 +398,6 @@ Việc chọn sản phẩm bảo hiểm bắt đầu từ <a href="/huu-ich/ke-h
       <li>gia đình đã có cách <a href="/huu-ich/tich-luy">tích luỹ</a>, <a href="/huu-ich/cach-dau-tu">đầu tư</a> để có số tiền đó đúng lúc chưa?</li>
     </ul>
     <p>Khi đã có kế hoạch tài chính rồi, sẽ tính đến việc <b>bảo vệ</b> kế hoạch đó trước những rủi ro bằng những loại bảo hiểm.</p>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
     <h3>Chi phí chữa bệnh, tai nạn</h3>
     <p>Người xưa đã đúc kết quy luật của cuộc đời của đa số người là <b><a href="/huu-ich/cau-chuyen/sinh-lao-benh-tu">Sinh-Lão-Bệnh-Tử</a></b>. Tử là điều xảy ra sau cùng nhưng không phải là điều đáng sợ nhất, điều đáng sợ nhất là Bệnh! Chữ Bệnh ở đây nói đến những bệnh tật và tai nạn nghiêm trọng. Bệnh mà không có tiền để chạy chữa thì đáng sợ hơn nữa, bệnh nhẹ không được chữa sớm sẽ trở thành bệnh nặng. Biết trước quy luật trên thì mỗi người đều phải để dành cho chính mình một khoản tiền để đối phó với Bệnh. Nếu để dành đều đặn thì đến khi Lão cũng đã có một số tiền lớn. Nhưng rất nhiều người <i>chưa kịp</i> Lão, chưa kịp để dành xong thì Bệnh đã đến, lúc đó có một số tiền bảo hiểm lớn thì tốt biết mấy!<br>
 Về bệnh tật và tai nạn thì người làm công đã có bảo hiểm y tế bắt buộc, người làm nghề tự do có thể mua bảo hiểm y tế tự nguyện. Tuy nhiên bảo hiểm y tế của nhà nước <i><span class="tmark">không chi trả đủ cho mọi thiệt hại</span></i>. Những thiệt hại không được chi trả như giảm sút thu nhập trong và sau khi điều trị thì người bệnh và gia đình vẫn phải tự chịu, chưa kể BHYT không chi trả 100% chi phí điều trị (phần lớn người tham gia BHYT nhà nước chỉ được trả 80% chi phí và mỗi lần không quá 40 tháng lương tối thiểu), hoặc thiệt hại nghiêm trọng hơn là qua đời hoặc mất khả năng lao động do bệnh tật, tai nạn.<br>
@@ -527,34 +444,6 @@ data-ad-slot="3830899615">
 Tương tự như vậy, nếu bạn dự định để dành 2,5 tỉ đồng cho con du học sau 15 năm nữa, mỗi tháng bạn để dành 5 triệu đồng. Để chắc chắn có số tiền 2,5 tỉ đồng đó đúng lúc dù cho lúc đó bạn không còn bên cạnh con mình, bạn cần số tiền bảo hiểm tử vong khoảng 470 triệu đồng và bảo hiểm tai nạn hơn 500 triệu đồng với mức phí khoảng 2,1 triệu đồng / năm, khoảng 3,5% số tiền bạn tiết kiệm.
     <br>Nếu có khả năng thì mua thêm bảo hiểm bệnh nghiêm trọng để bù đắp thiệt hại còn lại sau khi được BH y tế chi trả trong trường hợp mắc những bệnh tốn nhiều tiền.<br>
 Sau khi đã chọn những thứ bảo hiểm cần có rồi, bước tiếp theo là sắp xếp độ ưu tiên để chọn mua những thứ hợp với ngân sách gia đình, nếu ngân sách cho phép thì mua hết.</p>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
     <p>Thử so sánh phí bảo hiểm với phí gửi xe. Để gửi một chiếc xe gắn máy trị giá 30 triệu đồng người ta tốn ít nhất 3 ngàn đồng một ngày, hơn 1 triệu đồng mỗi năm. Tính ra chi phí cả năm là 3,65% giá trị chiếc xe. Tốn phí như vậy nhưng khi chiếc xe bị mất đi, người chủ xe không đòi được đủ số tiền 30 triệu đồng một cách dễ dàng, sẽ bị bớt vì xe đã cũ… Trong khi đó, với số tiền tương đương tiền giữ xe đó người ta được bảo hiểm sinh mạng 300 triệu đồng, không bị bớt đi chút nào khi bồi thường.
     <br>Sự khác nhau giữa tỉ lệ phí trong hai trường hợp trên nằm ở chỗ xác suất để rủi ro xảy ra. Xác suất của rủi ro mất xe cao hơn rủi ro mất mạng.
     <br>Nhiều người vẫn nghĩ rằng xác suất để rủi ro xảy ra thấp thì không cần bảo hiểm, hoặc không cần số tiền bảo hiểm lớn. Ví dụ: <a href="http://www.gso.gov.vn/default.aspx?tabid=387&amp;idmid=3&amp;ItemID=11488" rel="nofollow" target="_blank">tỉ suất chết ở Việt Nam</a> trong năm 2010 là 6,8‰, và cứ 100.000 dân thì có 29,3 người mắc <a href="http://ungthu.net.vn/?a=readmore&amp;id=YYTLQN2TD3K71RJ29" rel="nofollow" target="_blank">ung thư gan</a>, tỉ lệ quá nhỏ, <b>có đáng lo không</b>?</p>
@@ -604,6 +493,21 @@ Lời bài hát tả hoàn cảnh đầy xúc động của một người sau k
     <div>Bạn có thể chắc chắn tránh được việc ra đi bất ngờ không? Chưa chắc.</div>
     <div>Bạn hãy chuẩn bị tốt để có thể sẵn sàng ra đi mà để lại ít đau đớn nhất cho những người thân yêu của mình.</div>
 
+  <div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="../chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
+<br>* <a href="phi-bao-hiem-nhan-tho">Tiền đóng BHNT sẽ đi đâu?</a>
+<br>* <a href="bhnt-lien-ket-chung">BHNT liên kết chung là gì?</a>
+<br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
+<br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
+<br>* <a href="../cau-chuyen/sinh-lao-benh-tu">Những rủi ro khó tránh</a>
+<br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
+<br>* <a href="../dau-tu-co-phieu/">Một cách đầu tư cổ phiếu ít rủi ro</a>
+<br>* <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
+<br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a>
+  </div>
+
+
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -630,21 +534,6 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-
-
-  <div class="todiscuss">
-Các bài liên quan:
-<br>* <a href="../chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
-<br>* <a href="phi-bao-hiem-nhan-tho">Tiền đóng BHNT sẽ đi đâu?</a>
-<br>* <a href="bhnt-lien-ket-chung">BHNT liên kết chung là gì?</a>
-<br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
-<br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
-<br>* <a href="../cau-chuyen/sinh-lao-benh-tu">Những rủi ro khó tránh</a>
-<br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
-<br>* <a href="../dau-tu-co-phieu/">Một cách đầu tư cổ phiếu ít rủi ro</a>
-<br>* <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
-<br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a>
-  </div>
 
   <hr>
   <div class="footer">
