--- a/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
+++ b/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -333,6 +334,20 @@ data-ad-slot="3830899615">
     <li>Khi đáo hạn sổ tiết kiệm, người ta thường lấy một phần tiền lãi đem tiêu vì nó lẻ, cho nên dù không mất đi đâu đồng nào nhưng kết quả tiết kiệm dài hạn sẽ ít hơn tính toán. Một số người thậm chí còn tiêu cả phần gốc khi bị cám dỗ trong những đợt khuyến mãi tivi, xe mới, điện thoại mới… Tiền để trong tài khoản bảo hiểm không tự quay về khách hàng nên không bị hao hụt.</li>
     <li>Người ta thường chờ đến khi sổ cũ đáo hạn để gửi thêm vì ngại phải giữ quá nhiều sổ tiết kiệm, ngại đến ngân hàng nhiều lần, như vậy tiền nằm chờ một thời gian không sinh lãi và dễ bị tiêu bớt. Trong khi đó, chỉ cần gọi điện thoại là công ty bảo hiểm nhân thọ cử người đến tận nơi nhận tiền nhập vào tài khoản liên kết chung để sinh lời ngay.</li>
   </ol>
+  <p>Tham gia bảo hiểm nhân thọ là nhận được hai trong ba thứ sau:</p>
+  <ul>
+    <li>được làm từ thiện: giúp hàng ngàn người không may mỗi năm,</li>
+    <li>được hàng trăm ngàn người giúp khi mình nằm bệnh viện, gặp tai nạn, mắc bệnh nghiêm trọng,</li>
+    <li>được một số tiền tiết kiệm lớn,</li>
+  </ul>
+  <p>và bớt một thứ:</p>
+  <ul><li>tự do mua sắm những thứ không cần thiết.</li></ul>
+
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="bhnt-lien-ket-chung">BHNT liên kết chung là gì?</a>
+  <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a></div>
+
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -360,20 +375,6 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-
-  <p>Tham gia bảo hiểm nhân thọ là nhận được hai trong ba thứ sau:</p>
-  <ul>
-    <li>được làm từ thiện: giúp hàng ngàn người không may mỗi năm,</li>
-    <li>được hàng trăm ngàn người giúp khi mình nằm bệnh viện, gặp tai nạn, mắc bệnh nghiêm trọng,</li>
-    <li>được một số tiền tiết kiệm lớn,</li>
-  </ul>
-  <p>và bớt một thứ:</p>
-  <ul><li>tự do mua sắm những thứ không cần thiết.</li></ul>
-
-  <div class="todiscuss">
-  Các bài liên quan:
-  <br>* <a href="bhnt-lien-ket-chung">BHNT liên kết chung là gì?</a>
-  <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
   <div class="footer">
