--- a/huu-ich/cau-chuyen/bat-dau-dau-tu.html
+++ b/huu-ich/cau-chuyen/bat-dau-dau-tu.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -263,6 +264,7 @@ data-ad-slot="3830899615">
   <br>Màu cam là số tiền bỏ vào, màu xanh dương là số tiền thu được.</div>
   <p>Ví dụ nếu bạn trì hoãn việc đầu tư năm năm, bạn tưởng rằng bạn sẽ bị giảm đi 9300$, tức là giá trị của khoản đầu tư của mình sau năm năm đầu tiên. Nhưng bạn đã lầm, rất sai lầm. Năm năm bạn bỏ lỡ không phải là năm năm đầu, mà là năm năm cuối. Nói cách khác, bạn sẽ bị giảm đi 21.000$, đó là hiệu số giữa giá trị 60.000$ sau 20 năm và giá trị 39.000$ sau 15 năm. Đó là hơn 50% giá trị của khoản đầu tư của mình sau 15 năm.</p>
   <p>Điều đó được gọi là sức mạnh của lãi kép - và đó là một điều tuyệt vời, nhưng nó cần thời gian để làm việc kỳ diệu của nó. Để có được đầy đủ giá trị của sự kỳ diệu, bạn phải bắt đầu sớm.</p>
+  <p>Bạn lấy tiền từ đâu để đầu tư, đặc biệt là nếu bạn vẫn đang còn trẻ, thu nhập chưa cao? Tiền đầu tư phải đến từ việc chi tiêu ít hơn bạn kiếm được. Đó không phải là một câu trả lời bình thường, mà đó là câu trả lời duy nhất. Lựa chọn siết thắt lưng của bạn ngay bây giờ thì tốt hơn để đến khi bạn không có một sự lựa chọn sau này.</p>
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -291,7 +293,6 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 
-  <p>Bạn lấy tiền từ đâu để đầu tư, đặc biệt là nếu bạn vẫn đang còn trẻ, thu nhập chưa cao? Tiền đầu tư phải đến từ việc chi tiêu ít hơn bạn kiếm được. Đó không phải là một câu trả lời bình thường, mà đó là câu trả lời duy nhất. Lựa chọn siết thắt lưng của bạn ngay bây giờ thì tốt hơn để đến khi bạn không có một sự lựa chọn sau này.</p>
   <h3>Làm thế nào để bạn bắt đầu?</h3>
   <p>Chiến lược tốt nhất đã được biết tới nay là <b>trả tiền cho mình trước</b>. Điều đó có nghĩa là bạn cần phải dành riêng số tiền bạn quyết định đầu tư trước khi bạn phải trả cho bất cứ thứ gì khác (tiền thuê nhà cho tới các hóa đơn điện thoại di động). Và đây là một số cách để làm điều đó:</p>
   <ul>
@@ -299,6 +300,9 @@ data-ad-slot="3830899615">
     <li>Nếu bạn không được bên sử dụng lao động thưởng, hãy xem xét mở một <b>IRA</b> (tài khoản hưu trí cá nhân có ưu đãi thuế). Hầu hết các công ty môi giới trực tuyến cung cấp việc mở tài khoản này miễn phí, nhưng bạn phải đóng vào một số tiền ban đầu đầu nho nhỏ. Nếu bên sử dụng lao động của bạn chuyển tiền lương  trực tuyến cho bạn, họ thường sẽ trả trực tiếp số tiền bạn chỉ định vào IRA của bạn - đó là một cách để trả tiền cho mình trước.</li>
     <li>Một điều ít người nói, nhưng mà cuối cùng là một trong những điều tốt nhất tôi và vợ tôi đã làm, đơn giản là mở ra một tài khoản tiết kiệm và cho tất cả các khoản tiền bất ngờ chúng tôi nhận được vào đó. Tất cả mọi người mà tôi đã nói chuyện xác nhân điều này, và bạn sẽ ngạc nhiên trước số tiền bất ngờ bạn tích luỹ được. Trong tuần này, chúng tôi đã nhận được một giảm giá 21$ từ công ty bảo hiểm của chúng tôi vì một số thay đổi chúng tôi chọn trên hợp đồng của chúng tôi. Trong quá khứ, khoản đó đã được tiêu hết ngay không cần suy nghĩ; nhưng kể từ khi chúng tôi mở tài khoản tiết kiệm đặc biệt đó, tất cả các khoản như vậy tự động đi vào tài khoản đó. Vào cuối mỗi năm, khoản "tiền thưởng" đó được đưa vào một trong các tài khoản hưu IRA của chúng tôi. Qua thời gian, những vụn bánh mì nhỏ đó dồn lại đến số lượng đáng ngạc nhiên. Chúng tôi cũng quan sát thấy một hiện tượng buồn cười: Một khi bạn bắt đầu tìm kiếm vụn bánh mì, thì nó càng xuất hiện nhiều. Bạn thấy nhiều cơ hội ghi những món tiền thưởng nhỏ khi bạn luôn luôn tìm chúng.</li>
   </ul>
+  <h3>Theo đúng lộ trình</h3>
+  <p>Mọi nhà đầu tư thành công đều sẽ cho bạn biết một điều: đầu tư thành công là việc nhàm chán. Thành công đến từ sự kiên nhẫn, siêng năng và kiên trì hơn bất cứ thứ gì khác. Đặc biệt và năng nổ thường làm tăng chi phí cho bạn hơn là tăng tích luỹ cho bạn. Ngay cả Warren Buffett nổi tiếng thừa nhận rằng bí quyết thành công của ông là ông làm chủ "nghệ thuật không làm gì", cụm từ của ông nói về những việc đơn giản và kiên nhẫn. Tóm lại, để cho lãi kép làm công việc của mình bằng cách cho nó thời gian và đừng can thiệp đến nó.</p>
+  <p>Như bạn có thể nhìn thấy từ biểu đồ trên, ngay cả khi bạn bắt đầu với các khoản đầu tư nhỏ, nó sẽ phát triển đến một số tiền khá lớn nếu bạn theo đúng lộ trình. Đầu tư không phải là khoa học tên lửa; nó là số tiền bạn trả cho mình trước trong mỗi tháng, thậm chí nếu bạn cần tiền gì đó trong ngắn hạn thì cũng phải trả cho mình trước.</p>
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -327,9 +331,6 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 
-  <h3>Theo đúng lộ trình</h3>
-  <p>Mọi nhà đầu tư thành công đều sẽ cho bạn biết một điều: đầu tư thành công là việc nhàm chán. Thành công đến từ sự kiên nhẫn, siêng năng và kiên trì hơn bất cứ thứ gì khác. Đặc biệt và năng nổ thường làm tăng chi phí cho bạn hơn là tăng tích luỹ cho bạn. Ngay cả Warren Buffett nổi tiếng thừa nhận rằng bí quyết thành công của ông là ông làm chủ "nghệ thuật không làm gì", cụm từ của ông nói về những việc đơn giản và kiên nhẫn. Tóm lại, để cho lãi kép làm công việc của mình bằng cách cho nó thời gian và đừng can thiệp đến nó.</p>
-  <p>Như bạn có thể nhìn thấy từ biểu đồ trên, ngay cả khi bạn bắt đầu với các khoản đầu tư nhỏ, nó sẽ phát triển đến một số tiền khá lớn nếu bạn theo đúng lộ trình. Đầu tư không phải là khoa học tên lửa; nó là số tiền bạn trả cho mình trước trong mỗi tháng, thậm chí nếu bạn cần tiền gì đó trong ngắn hạn thì cũng phải trả cho mình trước.</p>
   <h3>Nhận xét</h3>
   <p>Tại sao những người chưa trải qua một cuộc suy thoái lại không đầu tư? Có phải vì họ chưa thấy cảnh thiếu thốn?
   <br>Bạn có thấy những người già đi bán vé số, đi xin tiền trên đường phố không?</p>
@@ -338,34 +339,6 @@ data-ad-slot="3830899615">
   <p>Bạn có ngạc nhiên khi biết rằng người dân ở các nước giàu cũng phải <a href="../tich-luy#luonghuu">tự để dành tiền cho tuổi già</a>?</p>
   <p><a href="../dau-tu-co-phieu/quy-dau-tu">Quỹ đầu tư</a> đã có mặt ở Việt Nam từ năm 2004. Quỹ đầu tư dạng mở có mặt ở Việt Nam từ năm 2008. Quỹ đầu tư dạng mở rất tiện cho người dân để dành tiền.</p>
   <p>Kế hoạch hưu trí tự nguyện đã có ở Việt Nam từ năm 2013 nhưng có ít doanh nghiệp <a href="../tien-thuong-cuoi-nam">thưởng cho nhân viên</a> theo cách này. Khi người chủ không giúp bạn thì bạn phải tự trả tiền cho mình trước.</p>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <p>Để biết được cần phải <b>trả tiền cho mình trước</b> bao nhiêu cho đủ thì hãy dùng bảng tính <a href="../ke-hoach-tai-chinh/">KHTC</a> để tính. KHTC có tính đến yếu tố thu nhập tăng dần nên sẽ tính ra mức trả tiền cho mình tăng dần, khi lương thấp thì trả cho mình thấp sau đó tăng dần lên.</p>
 
   <div class="todiscuss">
@@ -377,6 +350,34 @@ data-ad-slot="3830899615">
   <br>* <a href="../tich-luy#luonghuu">Lương hưu ở các nước giàu</a>
   <br>* <a href="../tien-thuong-cuoi-nam">Quỹ hưu trí tự nguyện bổ sung cho bảo hiểm xã hội</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132815538449670144" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/636092159889729" rel="nofollow" target="_blank">Facebook</a></div>
+
+
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+
 
   <hr>
   <div class="footer">
