--- a/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -355,6 +356,18 @@ data-ad-slot="3830899615">
     <li>khi số tiền trong ngân hàng giảm xuống dưới mức cần thiết, chúng ta chuyển tiền từ quỹ đầu tư trái phiếu cho vào ngân hàng</li>
     <li>khi số tiền trong quỹ đầu tư trái phiếu giảm xuống dưới mức cần thiết, chúng ta chuyển tiền từ quỹ đầu tư cổ phiếu sang quỹ đầu tư trái phiếu, nên chuyển vào thời điểm giá cổ phiếu đang cao sẽ có lợi hơn</a>
   </ol>
+  <div class="flright"><amp-img alt="Tích luỹ tài sản bằng quỹ mở" src="/images/Mutual-Fund.jpg" width="500" height="400" layout="responsive"></amp-img></div>
+  <p>Khi tham gia quỹ đầu tư, nhà đầu tư được hưởng lợi như trực tiếp đầu tư vào doanh nghiệp, <a href="so-tk-hay-dau-tu">lợi nhuận thường cao hơn gửi tiết kiệm ở ngân hàng</a>, lại không tốn thời giờ tìm hiểu, phân tích số liệu tài chính của các doanh nghiệp vì đã có nhóm chuyên gia được thuê để làm việc chuyên môn đó.
+  <br>Quỹ mở rất thích hợp cho những người không có nhiều thời gian giao dịch: giáo viên, bác sĩ, kỹ sư, công nhân… Không cần lên sàn đặt lệnh mua, chỉ cần mỗi tháng dành ra một ít tiền, gọi người đến chuyển vào quỹ một cách an toàn và tiện lợi. Mua đơn vị quỹ tiện hơn mua vàng nhiều, chỉ cần 1 triệu đồng là có thể mua được, trong khi mua vàng SJC cần vài chục triệu đồng. Như vậy mỗi tháng đều có thể chuyển tiền thành đơn vị quỹ, không phải để tiền nằm chờ gom đủ số mới chuyển thành vàng.
+  <br>Dịch vụ quỹ đầu tư mở rất được nhiều người ở các nước công nghiệp hoá dùng để <a href="../tich-luy">tích luỹ</a> tiền thay vì gửi tiết kiệm ở ngân hàng, xem <a href="http://en.wikipedia.org/wiki/Mutual_fund" target='_blank'>Mutual fund</a>.
+  <br>Cho tới cuối năm 2012, ở Việt Nam có hai bộ quỹ mở là Maxx - Phúc Lộc Thịnh Vượng của Manulife và PRUlink của Prudential. Trong năm 2013, một số quỹ đóng đã chuyển thành quỹ mở như VFMVFA, VFMVF1, và một số quỹ mở mới được thành lập. Tháng 10 năm 2017, Manulife đã cải tiến bộ quỹ mở Maxx - Phúc Lộc Thịnh Vượng thành Điểm Tựa Đầu Tư với nhiều ưu điểm.</p>
+  <p>Tiền của nhà đầu tư trong quỹ đầu tư được kiểm soát rất chặt chẽ:</p>
+  <ol>
+    <li>Công ty quản lý quỹ chỉ phân tích thị trường và ra quyết định mua bán cổ phiếu hay trái phiếu vào lúc thích hợp</li>
+    <li>Ngân hàng giám sát nắm tất cả tiền, cổ phiếu, trái phiếu. Ngân hàng giám sát sẽ công bố giá trị tài sản quỹ hàng tuần, công ty quản lý quỹ không thể giả mạo số liệu để lừa ai được. Các ngân hàng giám sát thường là ngân hàng nước ngoài có nhiều kinh nghiệm như HSBC, Standard Chartered</li>
+    <li>Ban đại diện quỹ do các nhà đầu tư bầu lên sẽ theo dõi hoạt động của công ty quản lý quỹ</li>
+    <li>Công ty kiểm toán độc lập sẽ định kỳ kiểm tra sổ sách của công ty quản lý quỹ</li>
+  </ol>
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -383,18 +396,6 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 
-  <div class="flright"><amp-img alt="Tích luỹ tài sản bằng quỹ mở" src="/images/Mutual-Fund.jpg" width="500" height="400" layout="responsive"></amp-img></div>
-  <p>Khi tham gia quỹ đầu tư, nhà đầu tư được hưởng lợi như trực tiếp đầu tư vào doanh nghiệp, <a href="so-tk-hay-dau-tu">lợi nhuận thường cao hơn gửi tiết kiệm ở ngân hàng</a>, lại không tốn thời giờ tìm hiểu, phân tích số liệu tài chính của các doanh nghiệp vì đã có nhóm chuyên gia được thuê để làm việc chuyên môn đó.
-  <br>Quỹ mở rất thích hợp cho những người không có nhiều thời gian giao dịch: giáo viên, bác sĩ, kỹ sư, công nhân… Không cần lên sàn đặt lệnh mua, chỉ cần mỗi tháng dành ra một ít tiền, gọi người đến chuyển vào quỹ một cách an toàn và tiện lợi. Mua đơn vị quỹ tiện hơn mua vàng nhiều, chỉ cần 1 triệu đồng là có thể mua được, trong khi mua vàng SJC cần vài chục triệu đồng. Như vậy mỗi tháng đều có thể chuyển tiền thành đơn vị quỹ, không phải để tiền nằm chờ gom đủ số mới chuyển thành vàng.
-  <br>Dịch vụ quỹ đầu tư mở rất được nhiều người ở các nước công nghiệp hoá dùng để <a href="../tich-luy">tích luỹ</a> tiền thay vì gửi tiết kiệm ở ngân hàng, xem <a href="http://en.wikipedia.org/wiki/Mutual_fund" target='_blank'>Mutual fund</a>.
-  <br>Cho tới cuối năm 2012, ở Việt Nam có hai bộ quỹ mở là <a href="maxx-pltv">Maxx - Phúc Lộc Thịnh Vượng</a> của Manulife và PRUlink của Prudential. Trong năm 2013, một số quỹ đóng đã chuyển thành quỹ mở như VFMVFA, VFMVF1, và một số quỹ mở mới được thành lập. Tháng 10 năm 2017, Manulife đã cải tiến bộ quỹ mở Maxx - Phúc Lộc Thịnh Vượng thành <a href="../cac-loai-bao-hiem/diem-tua-dau-tu">Điểm Tựa Đầu Tư</a> với nhiều ưu điểm.</p>
-  <p>Tiền của nhà đầu tư trong quỹ đầu tư được kiểm soát rất chặt chẽ:</p>
-  <ol>
-    <li>Công ty quản lý quỹ chỉ phân tích thị trường và ra quyết định mua bán cổ phiếu hay trái phiếu vào lúc thích hợp</li>
-    <li>Ngân hàng giám sát nắm tất cả tiền, cổ phiếu, trái phiếu. Ngân hàng giám sát sẽ công bố giá trị tài sản quỹ hàng tuần, công ty quản lý quỹ không thể giả mạo số liệu để lừa ai được. Các ngân hàng giám sát thường là ngân hàng nước ngoài có nhiều kinh nghiệm như HSBC, Standard Chartered</li>
-    <li>Ban đại diện quỹ do các nhà đầu tư bầu lên sẽ theo dõi hoạt động của công ty quản lý quỹ</li>
-    <li>Công ty kiểm toán độc lập sẽ định kỳ kiểm tra sổ sách của công ty quản lý quỹ</li>
-  </ol>
   <h2>Cách tính giá đơn vị quỹ đầu tư</h2>
   <p>Tổng giá trị của một quỹ đầu tư gọi là NAV (Net Asset Value, giá trị tài sản ròng, là tổng tài sản trừ đi tổng nợ). Tài sản của một quỹ gồm có các cổ phiếu và trái phiếu mà quỹ đang sở hữu, các khoản tiền gửi ở các ngân hàng. Nợ của một quỹ là các khoản phải trả, gồm có các chi phí chưa trả, kể cả phí phải trả cho công ty quản lý quỹ. Khi giá cổ phiếu lên thì NAV của quỹ sẽ tăng lên và ngược lại.
   <br>Giá của một đơn vị quỹ đầu tư được tính bằng cách lấy NAV chia cho tổng số đơn vị quỹ của quỹ đó. Người ta cũng thường dùng chữ NAV để chỉ giá của một đơn vị quỹ thay vì giá của toàn bộ quỹ. Tổng số đơn vị quỹ mở sẽ tăng lên khi có người mua thêm đơn vị quỹ, và giảm xuống khi có người bán đơn vị quỹ. Tổng số đơn vị quỹ đóng không thay đổi. Quỹ mở sẽ giao dịch theo giá NAV. Quỹ đóng sẽ giao dịch theo giá thoả thuận trên thị trường chứng khoán.</p>
@@ -413,7 +414,6 @@ data-ad-slot="3830899615">
   <br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
   <br>* <a href="../cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>
   <br>* <a href="../de-tien-vao-dau">Kết quả đầu tư cổ phiếu dài hạn</a>
-  <br>* <a href="maxx-pltv">Quỹ đầu tư do Manulife quản lý</a>
   <br>* <a href="../cac-loai-bao-hiem/diem-tua-dau-tu">Điểm Tựa Đầu Tư</a>
   <br>* <a href="so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132807056941912064" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376324972533117" rel="nofollow" target="_blank">Facebook</a></div>
