--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -170,6 +170,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -298,34 +299,6 @@ data-ad-slot="3830899615">
  triệu đồng</b>. Lợi nhuận trung bình của việc tích luỹ này là <span class="red"><b> 17,44%/năm
  </b></span>.</p>
 
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <p>Bảng dưới đây cho biết lợi nhuận trung bình của mọi khoản đầu tư đều đặn vào những quỹ đầu tư trong 10/5/3/2/1 năm qua.</p>
   <div><amp-img alt="Kết quả đầu tư đều đặn" src="/data/VFM.png" height="281" width="565" layout="responsive"></amp-img></a></div>
 
@@ -394,6 +367,11 @@ data-ad-slot="3830899615">
   <p>Quỹ đầu tư là gì mà nó sinh lời nhiều hơn gửi tiết kiệm ở ngân hàng?
   <br>Mời bạn xem bài giải thích về <a href="quy-dau-tu">quỹ đầu tư</a>.</p>
 
+  <p>Gửi mỗi 4 tuần 1 triệu đồng trong hơn 12 năm thì lời như vậy, nhưng nếu chị D có 50 triệu đồng hay 5 tỉ đồng thì gửi vào quỹ đầu tư theo cách nào để có lời?
+  <br>Chị D nên chia số tiền đó ra làm nhiều phần bằng nhau để gửi vào quỹ đầu tư một cách đều đặn (mỗi tháng một phần) trong 3-6 tháng liên tiếp, rồi để yên đó một thời gian đủ dài (hơn 5 năm) để nó sinh lời.</p>
+
+  <p>Kết quả của quỹ đầu tư cao hơn sổ tiết kiệm có vài phần trăm mỗi năm vì lãi suất tiết kiệm (và lãi suất cho vay) ở Việt Nam quá cao. Ở Singapore, gửi tiết kiệm kỳ hạn 3 năm lãi 0,65%/năm còn quỹ đầu tư cổ phiếu thì được khoảng 7,5%/năm sau 10 năm, chênh lệch gấp 10 lần. Hy vọng kinh tế Việt Nam sẽ thay đổi theo hướng đó: lãi suất ngân hàng giảm xuống để giảm chi phí cho các doanh nghiệp và người đi vay.</p>
+
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -422,11 +400,6 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 
-  <p>Gửi mỗi 4 tuần 1 triệu đồng trong hơn 12 năm thì lời như vậy, nhưng nếu chị D có 50 triệu đồng hay 5 tỉ đồng thì gửi vào quỹ đầu tư theo cách nào để có lời?
-  <br>Chị D nên chia số tiền đó ra làm nhiều phần bằng nhau để gửi vào quỹ đầu tư một cách đều đặn (mỗi tháng một phần) trong 3-6 tháng liên tiếp, rồi để yên đó một thời gian đủ dài (hơn 5 năm) để nó sinh lời.</p>
-
-  <p>Kết quả của quỹ đầu tư cao hơn sổ tiết kiệm có vài phần trăm mỗi năm vì lãi suất tiết kiệm (và lãi suất cho vay) ở Việt Nam quá cao. Ở Singapore, gửi tiết kiệm kỳ hạn 3 năm lãi 0,65%/năm còn quỹ đầu tư cổ phiếu thì được khoảng 7,5%/năm sau 10 năm, chênh lệch gấp 10 lần. Hy vọng kinh tế Việt Nam sẽ thay đổi theo hướng đó: lãi suất ngân hàng giảm xuống để giảm chi phí cho các doanh nghiệp và người đi vay.</p>
-
   <h2 id="goldusd">Tiết kiệm bằng USD hoặc vàng có tốt hơn không?</h2>
   <p>Tôi giả định rằng chị U mua 100USD mỗi bốn tuần từ đầu năm 2009 đến nay chị U có 16.600
  USD tương đương 376,322
@@ -449,9 +422,36 @@ data-ad-slot="3830899615">
   <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
   <br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ dài hạn</a>
   <br>* <a href="quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
-  <br>* <a href="../cac-loai-bao-hiem/diem-tua-dau-tu">Điểm Tựa Đầu Tư</a>
   <br>* <a href="../cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia">Những quyết định tốt cho tuổi già</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132808171318173697" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/627783754053903" rel="nofollow" target="_blank">Facebook</a></div>
+
+
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+
 
   <hr>
   <div class="footer">
