--- a/huu-ich/tich-luy-dai-han.html
+++ b/huu-ich/tich-luy-dai-han.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -256,6 +257,10 @@ data-ad-slot="3830899615">
   <h3>Vàng</h3>
   <p>Có một thứ không mất giá mà mọi người đều biết, đó là vàng. Vài năm trở lại đây, do sự bất ổn về kinh tế và chính trị trên thế giới, giá vàng tăng lên rất cao làm cho nhiều người nghĩ rằng giá vàng sẽ <i>tăng nhanh hơn</i> mức trượt giá. Nhưng kết quả nghiên cứu của tác giả Stephen Harmston được Hội đồng Vàng Thế giới xuất bản (<a href="http://www.spdrgoldshares.com/media/GLD/file/research_study_22.pdf" target='_blank'>Gold as a Store of Value</a>) và được trích dẫn trong bài báo đăng trên VnExpress ngày 27/04/2010 (<a href="http://kinhdoanh.vnexpress.net/tin-tuc/vi-mo/bi-an-vang-2704911.html" target="_blank">Bí ẩn vàng</a>) cho thấy giá vàng tính bằng bánh mì hầu như không tăng sau hơn 2500 năm. Áp dụng điều đó ở Việt Nam, giả sử hôm nay một lượng vàng mua được 1.000 tô phở thì 10 hay 30 năm sau nó cũng chỉ mua được 1.000 tô phở. Có lúc vàng tăng giá, có lúc vàng giảm giá rất nhanh (xem giá vàng biến động tại <a href="http://goldprice.org/gold-price-history.html" target='_blank'>Gold Price History</a>), trong khi phở cứ tăng giá từ từ, cuối cùng thì giá vàng quy ra phở gần như không đổi.</p>
   <p>Không mất giá là ưu điểm của vàng để chống trượt giá, nhưng khi đưa vào bài toán tích luỹ dài hạn thì vàng có một khuyết điểm là <i>nó không sinh lợi</i>. Ví dụ sau đây sẽ cho thấy khuyết điểm đó ảnh hưởng như thế nào. Giả sử chị A bắt đầu có thu nhập năm 25 tuổi, về hưu năm 55 tuổi và sống thọ 85 tuổi, chị A có 30 năm kiếm tiền, chi tiêu và để dành vàng, và 30 năm tiêu dần vào số vàng đó. Do vàng không mất giá và cũng không sinh lợi nên số vàng tiêu hết trong 30 năm cuối đời bằng đúng số vàng tiêu trong 30 năm trước đó, nghĩa là mỗi khi chị A kiếm được một chỉ vàng thì được tiêu nửa chỉ và để nửa chỉ lại 30 năm sau mới tiêu. Tỉ lệ tiết kiệm trên thu nhập của chị A phải là 50%. Tỉ lệ đó quá cao, rất ít người có thể làm được như vậy và tất nhiên kế hoạch tích luỹ dài hạn không khả thi. Đó là chưa kể những chi tiêu chăm sóc sức khoẻ sẽ phát sinh ở tuổi già, tỉ lệ tiết kiệm cần tăng lên hơn nữa.</p>
+  <p>Như vậy tích luỹ vàng không còn hợp trong xã hội hiện đại, khi mà phải cố gắng làm mọi thứ sinh lợi, những thứ bỏ đi mà còn sinh lợi được thì thứ quý như vàng không sinh lợi là rất phí phạm. Vài năm trước, chị A có thể gửi vàng vào ngân hàng để sinh lợi chừng 1%/năm, bây giờ không còn được như vậy nữa. Tích luỹ vàng để sau này dùng cũng giống như con sóc để dành hạt dẻ trong hốc cây, đàn kiến tích trữ thức ăn trong tổ, một hình thức tích luỹ rất sơ khai.</p>
+  <p><i>Vậy tại sao có nhiều tổ chức tài chính vẫn giữ vàng?</i>
+  <br>Các tổ chức tài chính đó giữ vàng để <i>đầu cơ</i> chứ họ không giữ vàng hàng chục năm như chị A. <a href="cach-dau-tu">Đầu cơ</a> nghĩa là họ sẽ bán vàng ra khi thị trường khan hiếm vàng và mua vàng vào khi có nhiều người bán. Làm như vậy họ sẽ làm cho vàng sinh lợi. Chị A muốn làm cho vàng sinh lợi cũng phải làm như vậy, nhưng không dễ làm được. Rất nhiều người đã cố đầu cơ vàng nhưng số người thành công không nhiều, đa số không những không lời mà còn lỗ nữa.</p>
+
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -283,47 +288,13 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-
-  <p>Như vậy tích luỹ vàng không còn hợp trong xã hội hiện đại, khi mà phải cố gắng làm mọi thứ sinh lợi, những thứ bỏ đi mà còn sinh lợi được thì thứ quý như vàng không sinh lợi là rất phí phạm. Vài năm trước, chị A có thể gửi vàng vào ngân hàng để sinh lợi chừng 1%/năm, bây giờ không còn được như vậy nữa. Tích luỹ vàng để sau này dùng cũng giống như con sóc để dành hạt dẻ trong hốc cây, đàn kiến tích trữ thức ăn trong tổ, một hình thức tích luỹ rất sơ khai.</p>
-  <p><i>Vậy tại sao có nhiều tổ chức tài chính vẫn giữ vàng?</i>
-  <br>Các tổ chức tài chính đó giữ vàng để <i>đầu cơ</i> chứ họ không giữ vàng hàng chục năm như chị A. <a href="cach-dau-tu">Đầu cơ</a> nghĩa là họ sẽ bán vàng ra khi thị trường khan hiếm vàng và mua vàng vào khi có nhiều người bán. Làm như vậy họ sẽ làm cho vàng sinh lợi. Chị A muốn làm cho vàng sinh lợi cũng phải làm như vậy, nhưng không dễ làm được. Rất nhiều người đã cố đầu cơ vàng nhưng số người thành công không nhiều, đa số không những không lời mà còn lỗ nữa.</p>
 
   <h3>Gửi ngân hàng</h3>
   <p>Tóm lại, vàng vẫn chưa đủ tốt để tích luỹ dài hạn. Thứ gì có thể tốt hơn vàng trong việc tích luỹ dài hạn? Thứ đó phải tăng giá trị nhanh hơn tốc độ trượt giá. Thứ đó chính là thứ rất bình thường: <i>sổ tiết kiệm</i> kỳ hạn dài ở các ngân hàng!
   <br>Ngân hàng nhà nước luôn luôn điều chỉnh chính sách sao cho lãi suất huy động tiết kiệm có kỳ hạn 12 tháng trở lên sẽ hơi cao hơn mức trượt giá, khi nhiều khi ít. Khi muốn kiềm chế lạm phát thì lãi suất huy động tiết kiệm sẽ cao hơn nhiều để dân chúng đem tiền gửi vào ngân hàng, tiền mặt trở nên có giá hơn, giảm trượt giá.</p>
   <p>Ví dụ hôm nay chị A gửi vào ngân hàng 5 triệu đồng (tương đương 500kg gạo loại 10.000₫/kg) sau một năm chị A có được 5,5 triệu đồng, giả sử gạo tăng giá 8% thì chị A vẫn có thể mua được 500kg gạo và dư ra 100.000₫. Số tiền dư ra sau một năm không nhiều nhưng sau 30 năm thì con số sẽ khác một cách đáng kể. Giả sử trượt giá giữ nguyên 8%/năm và lãi suất huy động giữ nguyên 10%/năm, chị A không cần phải để dành đến 50% thu nhập của mình mua vàng để dùng sau 30 năm mà chỉ cần gửi tiết kiệm 41% thu nhập mỗi tháng.</p>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <p>Lãi suất tiết kiệm cao hơn mức trượt giá có 2% mỗi năm (10% - 8%), số tiền chị A cần phải tiết kiệm đã giảm xuống gần một phần năm (41% / 50%). Nếu chị A có cách làm cho tiền sinh lợi cao hơn so với trượt giá nhiều hơn nữa thì có thể để dành ít hơn, chi tiêu nhiều hơn trong hiện tại, việc tiết kiệm sẽ dễ dàng hơn.
   <br><i>Tính toán này có vẻ không giống với thực tế là những người gửi tiền tiết kiệm VND cứ thấy số tiền của mình nhỏ dần đi. Nguyên nhân của sự khác nhau giữa tính toán và thực tế là người gửi tiền tiết kiệm VND thường lấy tiền lãi ra dùng vì thấy nó lẻ, số tiền gốc gửi lại đương nhiên sẽ kém giá trị hơn năm ngoái vì đã bị trượt giá!</i></p>
-  <h3>Cổ phiếu</h3>
-  <p>Cách làm cho tiền sinh lợi cao hơn tiết kiệm ở ngân hàng chính là hùn vốn vào doanh nghiệp. Các doanh nghiệp hoạt động tốt như Vinamilk, Vietcombank hiện có lợi nhuận hàng năm trên 20%, những doanh nghiệp quy mô gia đình còn có mức lợi nhuận cao hơn nữa. Với lợi nhuận 20% thì chị A chỉ cần để dành 12% thu nhập mỗi tháng mà vẫn đủ sống từ năm 55 tuổi đến năm 85 tuổi. Tuy nhiên nếu chọn cách hùn vốn để sinh lợi thì chị A nên hùn vào nhiều doanh nghiệp trong các ngành khác nhau để giảm bớt rủi ro khi một doanh nghiệp gặp khó khăn.</p>
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -352,6 +323,8 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 
+  <h3>Cổ phiếu</h3>
+  <p>Cách làm cho tiền sinh lợi cao hơn tiết kiệm ở ngân hàng chính là hùn vốn vào doanh nghiệp. Các doanh nghiệp hoạt động tốt như Vinamilk, Vietcombank hiện có lợi nhuận hàng năm trên 20%, những doanh nghiệp quy mô gia đình còn có mức lợi nhuận cao hơn nữa. Với lợi nhuận 20% thì chị A chỉ cần để dành 12% thu nhập mỗi tháng mà vẫn đủ sống từ năm 55 tuổi đến năm 85 tuổi. Tuy nhiên nếu chọn cách hùn vốn để sinh lợi thì chị A nên hùn vào nhiều doanh nghiệp trong các ngành khác nhau để giảm bớt rủi ro khi một doanh nghiệp gặp khó khăn.</p>
   <p>Làm sao chị A có thể hùn vốn vào các doanh nghiệp làm ăn tốt? Để hùn vốn vào các doanh nghiệp gia đình làm ăn tốt thì phải là người thân quen. Để hùn vốn vào Vinamilk, Vietcombank dễ hơn nhiều, chỉ cần mua cổ phiếu.
   <br>Chị A không biết gì về cổ phiếu, không có thời gian làm thủ tục mua cổ phiếu, lại còn phải mua nhiều loại cổ phiếu khác nhau nữa, rồi những lúc cổ phiếu xuống giá thì sao?
   <br>Không sao cả. Không biết về cổ phiếu thì bỏ chút thời gian tìm hiểu những khái niệm và nguyên tắc chung, trẻ con các nước công nghiệp hoá còn chơi <a href="/kinh-nghiem/may-tinh/cashflow">trò chơi đầu tư cổ phiếu</a> được mà không lẽ chị A không hiểu được. Điều quan trọng là tìm hiểu từ những người hiểu biết, đừng nghe những người không biết nói là <i>để tiền vào cổ phiếu chỉ có nước bán nhà, nhảy lầu tự tử</i>. Những người không biết rõ về cổ phiếu mà cũng tham gia thị trường chứng khoán thì rất dễ bán nhà, nhảy lầu. Những người đã từng bán nhà vì cổ phiếu vẫn chưa chắc là đã biết rõ về thị trường chứng khoán. Do đó đừng nghe những người từng bán nhà vì cổ phiếu, và tất nhiên là không thể nghe những người đã nhảy lầu vì cổ phiếu (vì có thể họ không nói được nữa).
@@ -395,34 +368,6 @@ data-ad-slot="3830899615">
   <p>Cũng có người tin tưởng vào sức mạnh của đô-la Mỹ nên quyết định tích luỹ dài hạn bằng đô-la Mỹ. Nếu giữ đô-la Mỹ trong tủ thì còn dở hơn giữ vàng vì đô-la Mỹ thật sự có mất giá theo thời gian. Nếu gửi tiết kiệm bằng đô-la Mỹ thì dở hơn gửi tiết kiệm bằng tiền Việt Nam vì ngân hàng nhà nước có chính sách bảo vệ tiền Việt Nam. Tóm lại đô-la Mỹ cũng giống như vàng, chỉ thích hợp để đầu cơ chứ không thích hợp để giữ lâu dài. Ngay cả dân Mỹ cũng không gửi nhiều tiền trong các tài khoản tiết kiệm thì dân Việt Nam càng không nên (theo <a href="http://www.statisticbrain.com/american-family-financial-statistics/" target='_blank'>American Family Financial Statistics</a> trung bình số dư tài khoản tiết kiệm của dân Mỹ chỉ vào khoảng một tháng lương).</p>
   <p>Tôi đã dùng số liệu lịch sử tỷ giá USD-VND và giá vàng tính theo USD để tính hiệu quả của việc để dành tiền bằng USD hoặc vàng từ đầu năm 2009 đến nay. Kết quả đúng theo suy luận ở trên: giữ USD và vàng dài hạn không lợi bằng gửi tiết kiệm kỳ hạn một năm. Kết quả được trình bày trong bài <a href="dau-tu-co-phieu/so-tk-hay-dau-tu#goldusd">Sổ tiết kiệm hay quỹ đầu tư</a>.</p>
   <div><amp-img alt="So sánh kết quả đầu tư đều đặn" src="/data/XIRRs.png" height="162" width="523" layout="responsive"></amp-img></a></div>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <h2>An toàn</h2>
   <p>Trên đây là phần bàn về khả năng chống trượt giá của các công cụ trong mục đích tích luỹ dài hạn. Chúng ta tiếp tục bàn về tính an toàn hay là rủi ro mất trắng hoặc lỗ nặng của các công cụ. Chúng ta không bàn về những nguy cơ lỗ nhẹ do biến động nhất thời như giá vàng giảm, giá cổ phiếu giảm… vì những biến động đó được bù trừ trong dài hạn.
   <br>Những rủi ro có thể gây mất trắng hoặc lỗ nặng là: <i>lừa đảo, trộm cướp, cháy nhà, thay đổi chính sách, doanh nghiệp phá sản</i>.
