--- a/huu-ich/tich-luy.html
+++ b/huu-ich/tich-luy.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -286,6 +287,8 @@ data-ad-slot="3830899615">
   <br>Lương hưu có đủ sống không?
   <br>Con cháu có nuôi mình không?
   <br>Hay là mình phải đi bán vé số, đi rửa chén để kiếm chút cháo sống qua ngày; hay là mua một gói thuốc chuột uống để khỏi kéo dài những ngày sống thiếu thốn. Tôi đã mua vé số từ những cụ già 80 tuổi, chắc chắn cuộc sống của các cụ chẳng dễ dàng gì.</p>
+  <p>Bạn thử tưởng tượng một buổi sáng nào đó bạn đi ra đường mà quên đem theo tiền (và các thứ thẻ rút tiền), bạn sẽ thấy lúng túng như thế nào. Định ghé vào tiệm phở ăn sáng, sờ đến túi không thấy tiền nên thôi, muốn mua xôi ăn sáng cũng không được. Khát nước muốn ghé mua chai nước, cũng không có tiền. Muốn ghé vào tiệm sách đọc ké cho quên cơn đói, cũng không có tiền gửi xe… Chỉ một buổi sáng thiếu tiền mà bạn đã bối rối rồi, nếu thiếu tiền trong 15-20 năm thì bạn sẽ như thế nào? Muốn mua gói mì để ăn sáng, cũng phải hỏi xin con cho tiền.</p>
+  <p>Để không bị thiếu thốn khi tuổi già đến, mỗi người đều phải tích luỹ một số tiền lớn cho tuổi già của chính mình. Chúng ta còn chưa bàn đến việc tích luỹ tài sản để mua nhà hay để lại cho con cháu!</p>
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -314,41 +317,11 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 
-  <p>Bạn thử tưởng tượng một buổi sáng nào đó bạn đi ra đường mà quên đem theo tiền (và các thứ thẻ rút tiền), bạn sẽ thấy lúng túng như thế nào. Định ghé vào tiệm phở ăn sáng, sờ đến túi không thấy tiền nên thôi, muốn mua xôi ăn sáng cũng không được. Khát nước muốn ghé mua chai nước, cũng không có tiền. Muốn ghé vào tiệm sách đọc ké cho quên cơn đói, cũng không có tiền gửi xe… Chỉ một buổi sáng thiếu tiền mà bạn đã bối rối rồi, nếu thiếu tiền trong 15-20 năm thì bạn sẽ như thế nào? Muốn mua gói mì để ăn sáng, cũng phải hỏi xin con cho tiền.</p>
-  <p>Để không bị thiếu thốn khi tuổi già đến, mỗi người đều phải tích luỹ một số tiền lớn cho tuổi già của chính mình. Chúng ta còn chưa bàn đến việc tích luỹ tài sản để mua nhà hay để lại cho con cháu!</p>
   <h2>Tích luỹ bao nhiêu tiền?</h2>
   <p>Chỉ cần làm phép nhân đơn giản, lấy số tiền bạn đang tiêu mỗi tháng nhân cho 12 là được số tiền tiêu mỗi năm, nhân tiếp cho 20 hay 30 là số tiền bạn cần có khi về hưu.
   <br>Chưa đủ đâu! Còn phải tính trượt giá nữa. Chỉ cần trượt giá 7% mỗi năm thì sau 10 năm vật giá sẽ đắt gấp đôi, sau 20 năm đắt gấp bốn, sau 30 năm đắt gấp tám lần bây giờ. Như vậy con số ở trên phải nhân lên 8-10 lần nữa. Đó là chưa kể khi về già, tiền thuốc chữa bệnh còn tốn hơn nữa.
   <br>Giả sử bạn đang tiêu mỗi tháng <b>5 triệu đồng</b>. Với mức trượt giá khoảng 7%/ năm, 35 năm sau, bạn phải có <b>12-16 tỉ đồng</b> khi về hưu để đủ sống đến cuối đời mà không phải xin con, không phải đi bán vé số. Có sẵn số tiền đó khi về già, bạn có thể đi tập thể dục buổi sáng ở công viên, đánh cờ tướng với bạn già, đi chụp hình, đi bơi…
   <br>Làm sao để dành được số tiền quá lớn đó? Bạn <b>sẽ</b> có số tiền lớn đó nếu bạn tích luỹ <b>sớm, liên tục</b> và sinh lợi an toàn.</p>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <h2>Khi nào thì bắt đầu tích luỹ?</h2>
   <p>Hãy tích luỹ ngay khi <a href="cau-chuyen/bat-dau-dau-tu">bắt đầu làm ra tiền</a>. Tích luỹ càng sớm tiền càng đẻ ra nhiều tiền theo thời gian.
   <br>Bảng dưới đây cho kết quả tính mức độ tiết kiệm tối thiểu trên thu nhập để có đủ tiền sống khi về già. Bảng này tính cho nhiều trường hợp khác nhau: mức trượt giá, lợi nhuận đầu tư, tuổi bắt đầu tích luỹ. Kết quả cho thấy tại sao cần phải tích luỹ sớm: bắt đầu tích luỹ sớm thì tỉ lệ tiết kiệm trên thu nhập thấp hơn bắt đầu tích luỹ trễ.</p>
@@ -444,44 +417,12 @@ data-ad-slot="3830899615">
   </tr>
   </tbody>
   </table>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <p>Bảng trên đây tính cho trường hợp bắt đầu tiết kiệm với tài sản tích luỹ bằng không. Nếu đã có tích luỹ được một phần, hoặc có nhiều kế hoạch tích luỹ thì phải tính chi tiết hơn bằng bảng tính <a href="ke-hoach-tai-chinh/">KHTC</a>.
   <br>Trong tính toán trên:</p>
   <ul>
     <li>Không tính lương hưu BHXH vào đây vì lương đó quá thấp ở phần đông người lãnh</li>
     <li>Để cho tính toán đơn giản, giả sử mức thu nhập và chi tiêu tăng đều theo mức trượt giá</li>
   </ul>
-  <p>Thực tế thì thu nhập thường tăng từ từ theo thời gian, đôi khi có thể giảm đột ngột; còn chi tiêu thì cũng  tăng từ từ theo thời gian nhưng đôi khi lại tăng đôt ngột. Khi lập gia đình, có con thì chi tiêu sẽ tăng đáng kể trong một khoảng thời gian dài hơn 20 năm.
-  <br>Do đó kết quả tính toán đơn giản trên đây chưa đủ an toàn, cần phải tiết kiệm nhiều hơn mới đủ an toàn.
-  <br>Trong các tính toán trên, phải kể luôn các khoản thu nhập dạng trợ cấp mà bạn tiêu hết ngay ví dụ như ở chung nhà với người thân thì bạn được giảm bớt tiền nhà và tiền ăn. Cũng nên nhớ rằng không được tính các khoản lợi nhuận từ tài sản tiết kiệm vào thu nhập.</p>
-  <p>Cột thứ hai là kết quả tính cho trường hợp giả định không bao giờ có trong thực tế: trượt giá 0%. Ngay cả khi không trượt giá, bạn vẫn phải tiết kiệm từ một phần tư tới một nửa thu nhập để làm quỹ hưu trí cho chính mình.</p>
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -510,6 +451,10 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 
+  <p>Thực tế thì thu nhập thường tăng từ từ theo thời gian, đôi khi có thể giảm đột ngột; còn chi tiêu thì cũng  tăng từ từ theo thời gian nhưng đôi khi lại tăng đôt ngột. Khi lập gia đình, có con thì chi tiêu sẽ tăng đáng kể trong một khoảng thời gian dài hơn 20 năm.
+  <br>Do đó kết quả tính toán đơn giản trên đây chưa đủ an toàn, cần phải tiết kiệm nhiều hơn mới đủ an toàn.
+  <br>Trong các tính toán trên, phải kể luôn các khoản thu nhập dạng trợ cấp mà bạn tiêu hết ngay ví dụ như ở chung nhà với người thân thì bạn được giảm bớt tiền nhà và tiền ăn. Cũng nên nhớ rằng không được tính các khoản lợi nhuận từ tài sản tiết kiệm vào thu nhập.</p>
+  <p>Cột thứ hai là kết quả tính cho trường hợp giả định không bao giờ có trong thực tế: trượt giá 0%. Ngay cả khi không trượt giá, bạn vẫn phải tiết kiệm từ một phần tư tới một nửa thu nhập để làm quỹ hưu trí cho chính mình.</p>
   <p>Bạn có biết rằng những người đi làm có hợp đồng lao động hợp pháp ở Việt Nam đang đều đặn gửi 26% lương vào hệ thống Bảo hiểm Xã hội của nhà nước để khi về hưu sẽ được lãnh lương hưu. Trong 26% đó, người trả lương cho bạn đóng 18%, còn 8% trừ vào lương của bạn.
   <br>Bạn thấy đó, 26% đóng vào Bảo hiểm Xã hội chỉ tương đương kết quả tính toán khi không có trượt giá trong bảng trên thì lương hưu BHXH làm sao đủ sống khi có trượt giá? Chưa kể một sự thật còn đáng ngại hơn nữa là phần nhiều người lao động ở Việt Nam chỉ gửi 26% của chừng một phần tư tới một phần ba thu nhập thật, tức là lương hưu càng trở nên ít ỏi. Nhà nước cũng thấy vấn đề này nên đang bàn với các công ty bảo hiểm nhân thọ đưa ra các kế hoạch <a href="tien-thuong-cuoi-nam" target="_blank">hưu trí tự nguyện</a>. Trong khi chưa có kế hoạch đó thì mỗi người phải tự thực hiện <a href="ke-hoach-tai-chinh/">kế hoạch</a> của riêng mình.</p>
   <p><b>Cột thứ ba</b> là kết quả tính cho trường hợp gần giống thực tế hiện nay: trượt giá 8%/năm và lãi suất tiết kiệm 10%/năm. Trong trường hợp này bạn cần phải tiết kiệm nhiều hơn trường hợp không trượt giá. Nếu bạn bắt đầu tích luỹ ở tuổi 23, bạn cần để dành ít nhất 26% thu nhập của mình cho quỹ hưu trí. Nếu bạn đợi đến khi nuôi con xong, 50 tuổi mới bắt đầu tích luỹ thì bạn chỉ được tiêu 37% thu nhập của mình, để 63% cho 10 năm sau.</p>
@@ -591,34 +536,6 @@ data-ad-slot="3830899615">
   <p>Một số người dùng số tiền tiết kiệm làm vốn tự kinh doanh quy mô nhỏ, có thể sinh lời nhiều hơn lãi suất tiết kiệm ngân hàng đến vài lần, rất tốt! Tuy nhiên việc buôn bán nhỏ không thể phát triển mãi đến quy mô vài chục tỉ đồng mà vẫn giữ nguyên lợi nhuận cao. Do đó luôn luôn cần đến các cách tích luỹ sinh lợi khác. Và một điều cần phải luôn luôn nhớ là không bao giờ để hết trứng trong một giỏ. Để hết vốn liếng vào một chỗ, đến khi thị trường không thuận lợi thì rất nguy. Nên chia tài sản ra nhiều chỗ: chỗ lợi nhuận thấp và rủi ro thấp, chỗ lợi nhuận cao và rủi ro cao.</p>
   <p>Có hai cách để có <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">lợi nhuận cao hơn gửi tiết kiệm</a> ở ngân hàng, đó là đầu tư bất động sản và đầu tư cổ phiếu. Để đầu tư bất động sản thì cần có vốn lớn và nhanh nhạy với thông tin. Đầu tư vào cổ phiếu không đòi hỏi vốn lớn nhưng cũng cần có kiến thức và thông tin, tuy nhiên có cách để đầu tư cổ phiếu dễ dàng hơn, được trình bày <a href="de-tien-vao-dau">ở đây</a>. Xem bài này phân tích kỹ hơn về <a href="tich-luy-dai-han">các công cụ tích luỹ dài hạn</a>.</p>
   <p>Dù cho bạn dùng những cách tích luỹ nào, hãy luôn luôn <a href="/kinh-nghiem/may-tinh/gnucash">theo dõi tài sản</a> của mình, giá trị tài sản phải tăng nhanh hơn mức trượt giá.</p>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <h2>Làm sao tích luỹ được khi tôi thường tiêu hết thu nhập của mình?</h2>
   <p>Để tiết kiệm được, cần phải có <b>quyết tâm</b>, cần phải nghĩ đến <b>tương lai của chính mình</b>. Ngày nay mình có iPhone, iPad, AirBlade, TV LED 3D thật thích nhưng 35 năm sau mình có mười mấy tỉ đồng để sống không? Nếu không có hàng chục tỉ đồng thì mình có dám mua gói thuốc chuột uống không? Khi về hưu mỗi ngày mình đi tập thể dục, đánh cờ, chụp hình phong cảnh hay là mình đi bán vé số từ sáng đến tối?</p>
   <p>Khi đã có quyết tâm tích luỹ cho tương lai chính mình rồi, hãy lập một <a href="ke-hoach-tai-chinh/">kế hoạch tài chính</a> khả thi. Để lập kế hoạch tài chính thì bạn phải biết <a href="chi-tieu">tiền của bạn đang đi đâu</a> hết. Bạn phải:</p>
@@ -662,34 +579,6 @@ data-ad-slot="3830899615">
   <p><b>Rất khó</b> để đạt được ngay lập tức tỉ lệ tiết kiệm như <a href="ke-hoach-tai-chinh/">bảng tính kế hoạch tài chính</a> tính cho bạn. Tuy nhiên bạn đừng nản lòng. Việc tập thói quen tiết kiệm cũng giống như cai thuốc lá hay là giảm cân, cần có thời gian để làm quen với nó. Hãy cố gắng bắt đầu với mức tiết kiệm 10% thu nhập, 3 tháng hoặc nửa năm sau tăng lên 15%, tăng từ từ đến khi đạt mức yêu cầu. Đừng bao giờ nản lòng.
   <br>Nếu bạn thấy khó giảm 10% chi tiêu hàng tháng, bạn hãy thử tưởng tượng lương bạn đột ngột bị giảm 10% hoặc lạm phát 10% mà lương chưa tăng (chuyện này rất dễ xảy ra trong thực tế). Khi đó bạn có tiếp tục sống không? Chắc chắn là vẫn sống, đâu có ai nhảy cầu tự tử vì bị mất 10% thu nhập. Vậy thì bạn hãy tự bớt chi tiêu của mình để khi về già không phải nghĩ đến chuyện nhảy cầu tự tử vì bị giảm đến 90% thu nhập.</p>
   <p>Sau khi lập kế hoạch, bạn sẽ biết mỗi tháng mình tiết kiệm được bao nhiêu. Ngay khi có tiền vào túi, bạn hãy cách ly số tiền tiết kiệm bằng cách gửi vào những nơi sinh lợi an toàn như ngân hàng, <a href="dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a> và đừng lấy nó ra dùng.</p>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <h2>Những sai lầm khi tích luỹ</h2>
   <h3>1. Tưởng lầm rằng sở hữu tài sản đắt tiền cũng là tích luỹ cho tương lai</h3>
   <p>Nhiều người nghĩ rằng dùng những thứ đắt tiền như smartphone, camera, TV LED 3D, xe hơi… đến khi cần tiền đem bán được, vậy cũng là tích luỹ cho tương lai. Họ quên rằng tích luỹ là phải làm cho đồng tiền tiết kiệm sinh lợi nhanh hơn mức trượt giá.</p>
@@ -743,35 +632,6 @@ data-ad-slot="3830899615">
     <li>Lương hưu tự nguyện tập thể: người lãnh lương và người trả lương góp tiền vào quỹ đầu tư để sinh lợi đến khi về hưu lấy ra dùng, tiền để trong quỹ không phải trả thuế thu nhập</li>
     <li>Lương hưu tự nguyện cá nhân: cá nhân gửi tiền vào quỹ đầu tư, tiền để trong quỹ không phải trả thuế thu nhập</li>
   </ol>
-
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
   <h3>Mỹ</h3>
   Người già ở Mỹ được hưởng tiền trợ cấp tuổi già từ quỹ Social Security. Đối với người đã từng đi làm, mức tiền trợ cấp tuổi già được tính từ số năm đi làm và mức lương trong những năm đó, tương tự như bảo hiểm xã hội ở Việt Nam. Người lãnh lương sẽ trích lại 6,2% lương và người trả lương góp thêm 6,2% lương nữa để nộp vào quỹ Social Security. (<a href="http://en.wikipedia.org/wiki/Payroll_tax" target='_blank'>Payroll tax</a>)
   <br>Nhiều người Mỹ tự lập kế hoạch hưu trí cho mình qua kế hoạch 401(k) vì <i>không thể hoàn toàn dựa vào quỹ Social Security</i> (<a href="http://www.kiplinger.com/columns/starting/archive/get-ahead-with-401k-in-your-20s.html" target='_blank'>Why You Need a 401(k) Right Away</a>). Theo kế hoạch 401(k), mỗi người <i>tự quyết định</i> sẽ trích bao nhiêu phần trăm lương của mình để gửi vào tài khoản hưu trí. Tài khoản hưu trí đó sẽ được giao cho các công ty quản lý quỹ hoặc công ty bảo hiểm nhân thọ quản lý, sinh lợi. Công ty quản lý quỹ thường tạo ra vài quỹ đầu tư khác nhau về mức lợi nhuận và rủi ro để người chủ tài khoản chọn theo ý riêng. Số tiền trích vào quỹ hưu trí sẽ không chịu thuế thu nhập cho tới khi được rút ra dùng. Một số người sử dụng lao động còn thưởng thêm một phần vào quỹ hưu trí của người làm công với điều kiện người làm công không rời công ty sớm hơn 3-4 năm. Người lãnh lương ở Mỹ được tư vấn lập kế hoạch 401(k) sớm, ngay khi bắt đầu lãnh lương. Có những bài viết hướng người ta đến mục tiêu có <a href="thong-ke-huu-tri-tu-nguyen-my">một triệu đô-la</a> trong tài khoản 401(k) khi về hưu.
