--- a/kinh-nghiem/may-tinh/index.html
+++ b/kinh-nghiem/may-tinh/index.html
@@ -134,6 +134,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -198,7 +199,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dt><a href='roaming'>Wi-Fi Roaming</a></dt>
   <dt><a href='tien-ich-di-dong'>Tiện-ích-di-động</a></dt>
   <dt><a href='OTT-apps'>OTT app để liên-lạc</a></dt>
-  <dt><a href='RCS'>Dịch vụ tin nhắn RCS</a></dt>
+  <dt><a href='RCS'>Nhắn tin miễn phí với RCS</a></dt>
   <dt><a href='conferencecall'>Conference Call</a></dt>
   <dt><a href='tai-khoan-google'>Tạo tài-khoản Google</a></dt>
   <dt><a href='googlemaps'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a></dt>
