--- a/kinh-nghiem/may-tinh/vi-dien-tu.html
+++ b/kinh-nghiem/may-tinh/vi-dien-tu.html
@@ -148,6 +148,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -496,6 +497,34 @@ data-ad-slot="3830899615">
 <br>Các app của các ngân-hàng thường có chức-năng QR Payment. QR Payment tương đương như một cái thẻ debit liên kết với tài-khoản-ngân-hàng. Một số ngân-hàng (MSB, Vietcombank, TPBank, VPBank) tạo QR-code của tài-khoản-ngân-hàng trong app để người khác scan và gửi tiền vào tài-khoản-ngân-hàng đó nhanh chóng và tiện lợi như các ví-điện-tử ở trên. Nếu không có QR-code thì người dùng QR Payment không thể nhận tiền như ví-điện-tử.</p>
 <h2>Pi Network</h2>
 <p>Dự án <a href="pi-network">Pi Network</a> đang phát triển với mục tiêu trở thành một ví điện tử dựa trên blockchain với hàng tỷ người sử dụng trên khắp thế giới. Mục tiêu của Pi là trở thành ví điện tử thông dụng như MoMo, ZaloPay, AliPay, WeChat Pay để mua bán mọi thứ hàng-hoá và dịch-vụ trong đời sống hàng ngày cả mua-bán trực-tiếp lẫn mua-bán qua Internet.</p>
+
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+
+
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
