--- a/sitemap.html
+++ b/sitemap.html
@@ -143,6 +143,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
     <a href='/huu-ich/cac-giai-doan'>Các giai-đoạn của cuộc-đời</a><br>
@@ -208,7 +209,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <a href='/kinh-nghiem/may-tinh/roaming'>Wi-Fi Roaming</a><br>
       <a href='/kinh-nghiem/may-tinh/tien-ich-di-dong'>Tiện-ích-di-động</a><br>
       <a href='/kinh-nghiem/may-tinh/OTT-apps'>OTT app để liên-lạc</a><br>
-      <a href='/kinh-nghiem/may-tinh/RCS'>Dịch vụ tin nhắn RCS</a><br>
+      <a href='/kinh-nghiem/may-tinh/RCS'>Nhắn tin miễn phí với RCS</a><br>
       <a href='/kinh-nghiem/may-tinh/conferencecall'>Conference Call</a><br>
       <a href='/kinh-nghiem/may-tinh/tai-khoan-google'>Tạo tài-khoản Google</a><br>
       <a href='/kinh-nghiem/may-tinh/googlemaps'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a><br>
