--- a/huu-ich/cau-chuyen/nhung-hon-da.html
+++ b/huu-ich/cau-chuyen/nhung-hon-da.html
@@ -152,6 +152,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -280,6 +281,14 @@ data-ad-slot="3830899615">
   <p>Áp dụng câu chuyện trên vào quản lý tài chính thì cái thùng là thu nhập cả đời người, kế hoạch dài hạn là hòn đá, kế hoạch trung hạn là hòn sỏi, kế hoạch ngắn hạn là hạt cát, chi tiêu hàng ngày là nước.</p>
   <p>Hòn đá <i>quỹ hưu trí</i> có một tính chất rất lạ là dù cho chúng ta để nó nằm trong thùng hay ngoài thùng, nó đều lớn dần theo lượng cát và nước mà ta cho vào thùng. Có tính chất đó là vì <a href="/huu-ich/tich-luy">quỹ hưu trí</a> chính là chi tiêu hàng ngày và những khoản mua sắm ngắn hạn được lặp lại trong 15-25 năm cuối đời. Nếu bạn cho nó vào thùng sớm thì nó chỉ chiếm 10% thu nhập, nếu cho vào thùng trễ nó có thể chiếm đến 60% thu nhập.
   <br>Mặc dù chúng ta chỉ có một hai hòn đá và vài ba hòn sỏi nhưng nếu chúng ta không để nó vào thùng thu nhập trước, thu nhập của chúng ta đã bị chiếm hết bởi chi tiêu hàng ngày và đổi xe, đổi ti-vi, sửa nhà thì còn đâu tiền cho con học đại học tốt, còn đâu tiền để sống khi về già.</p>
+  <p>Mỗi người chúng ta đều không thể biết trước được cái thùng thu nhập cả đời của mình lớn cỡ nào, chúng ta chỉ có thể cố gắng sao cho thu nhập năm nay của mình cao hơn năm trước, ít nhất là cao hơn mức trượt giá. Nếu cố gắng được như vậy thì chúng ta có thể có mức sống ổn định suốt đời, kể cả khi không còn làm ra tiền nữa, bằng cách dùng bảng tính <a href="/huu-ich/ke-hoach-tai-chinh/">KHTC</a>. Dùng công cụ đó, chúng ta có thể kiểm soát được lượng nước và cát để cho những hòn đá, những hòn sỏi có chỗ trong thùng.</p>
+
+  <div class="todiscuss">
+  Các bài liên quan:
+  <br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
+  <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
+  <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132810816074309632" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376824252483189" rel="nofollow" target="_blank">Facebook</a></div>
+
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -307,14 +316,6 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-
-  <p>Mỗi người chúng ta đều không thể biết trước được cái thùng thu nhập cả đời của mình lớn cỡ nào, chúng ta chỉ có thể cố gắng sao cho thu nhập năm nay của mình cao hơn năm trước, ít nhất là cao hơn mức trượt giá. Nếu cố gắng được như vậy thì chúng ta có thể có mức sống ổn định suốt đời, kể cả khi không còn làm ra tiền nữa, bằng cách dùng bảng tính <a href="/huu-ich/ke-hoach-tai-chinh/">KHTC</a>. Dùng công cụ đó, chúng ta có thể kiểm soát được lượng nước và cát để cho những hòn đá, những hòn sỏi có chỗ trong thùng.</p>
-
-  <div class="todiscuss">
-  Các bài liên quan:
-  <br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
-  <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
-  <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132810816074309632" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376824252483189" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
   <div class="footer">
