--- a/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
+++ b/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
@@ -133,6 +133,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -212,7 +213,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
   <br>* <a href="../de-tien-vao-dau">Kết quả đầu tư cổ phiếu dài hạn</a>
   <br>* <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
-  <br>* <a href="../cac-loai-bao-hiem/diem-tua-dau-tu">Quỹ đầu tư do Manulife quản lý</a>
   <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132813859637452801" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376848852480729" rel="nofollow" target="_blank">Facebook</a></div>
 
 
