--- a/huu-ich/de-tien-vao-dau.html
+++ b/huu-ich/de-tien-vao-dau.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -309,36 +310,7 @@ data-ad-slot="3830899615">
   <br>Từ năm 2008, tôi bắt đầu đưa tiền trở lại mua cổ phiếu, vẫn không có kiến thức đầy đủ. Theo lời khuyên của một người bạn, tôi mua cổ phiếu của Eximbank, thỉnh thoảng có mua thêm và không bán ra cho tới lúc này (năm 2012). Theo cảm tính, tôi mua cổ phiếu của Vinamilk, thời gian đầu có bán ra do tâm lý dao động, sau đó chỉ mua thêm và không bán nữa. Từ tháng 7/2011, tôi bắt đầu mua vào cổ phiếu Sacombank, chỉ mua từng chút, không bán ra.
   <br>Kết quả tới nay (2012) tôi lời 114% trên số cổ phiếu Eximbank, lời 79% trên số cổ phiếu Sacombank, lời 94% trên số cổ phiếu Vinamilk.
   <br>Số liệu mới của năm 2016: lợi nhuận trung bình khi đầu tư các cổ phiếu: VNM 36,33%/năm, KDC 12,8%/năm, HAG -22,8%/năm, MSN -6%/năm, CII 32,75%/năm, SAV 4,6%/năm, GMD 50,27%/năm, AGF 17,42%/năm, REE 29,06%/năm, VF1 5,83%/năm, EIB 19,73%/năm, STB 29,26%/năm, MBB 7,85%/năm.
-  <br>Mặc dù tỉ lệ lợi nhuận từ các cổ phiếu đó khá cao nhưng do không đủ tự tin nên tôi không dám đưa nhiều tiền vào đó, lợi nhuận tính thành tiền không nhiều. Từ năm 2016 tôi đã bán cổ phiếu dần dần để chuyển vào quỹ đầu tư của VFM. Hiện nay năm 2021, cổ phiếu chỉ chiếm khoảng 0,5% tổng tài sản của tôi, các quỹ đầu tư chiếm gần 40% tổng tài sản, một phần nhỏ nằm trong các hợp đồng bảo hiểm, phần lớn còn lại là căn nhà đang cho thuê.
-  </p>
-
-<!-- AMP In-article 1 -->
-<amp-ad
-media="(max-width: 399px)"
-height=280
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 400px) and (max-width: 499px)"
-height=250
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-<amp-ad
-media="(min-width: 500px)"
-height=100
-layout="fixed-height"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="3830899615">
-</amp-ad>
-
-
+  <br>Mặc dù tỉ lệ lợi nhuận từ các cổ phiếu đó khá cao nhưng do không đủ tự tin nên tôi không dám đưa nhiều tiền vào đó, lợi nhuận tính thành tiền không nhiều. Từ năm 2016 tôi đã bán cổ phiếu dần dần để chuyển vào quỹ đầu tư của VFM. Hiện nay năm 2021, cổ phiếu chỉ chiếm khoảng 0,5% tổng tài sản của tôi, các quỹ đầu tư chiếm gần 40% tổng tài sản, một phần nhỏ nằm trong các hợp đồng bảo hiểm, phần lớn còn lại là căn nhà đang cho thuê.</p>
   <p>Từ kinh nghiệm của mình, tôi tin rằng những điều 1, 2, 3 ở trên là đúng. Tôi cho rằng mình thật may mắn khi không có đủ kiến thức mà lời từ các cổ phiếu EIB, VNM, STB. Sắp tới tôi sẽ tăng tỉ lệ tiền đặt vào quỹ đầu tư để:</p>
   <ul>
     <li>không phụ thuộc nhiều vào yếu tố may mắn nữa</li>
