--- a/y-kien/su-giau-co.html
+++ b/y-kien/su-giau-co.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
+    <a href='/home/privacy'>Privacy Policy</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính gia-đình</a></h4>
@@ -231,6 +232,28 @@ data-ad-slot="5275186684">
 <p>Số người giàu theo những cách trên không nhiều.
 <br>Nếu không được đến mức "có của ăn mấy đời không hết" mà chỉ đến mức "có của ăn suốt đời không hết" thì cũng gọi là giàu. Sự giàu có có tính tương đối, tùy theo mức độ chi tiêu cá nhân mà khối tài sản cần có để "ăn suốt đời không hết" sẽ khác nhau. Mọi người đều có thể giàu ở mức độ này nếu làm theo phương pháp <a href="/huu-ich/chi-tieu">6 cái hũ</a>, bắt đầu càng sớm thì càng <a href="/huu-ich/tich-luy">dễ giàu</a>.
 <br>Phương pháp 6 cái hũ chỉ cho người ta kiểm soát chi tiêu để tích luỹ làm giàu. Từ xưa, ông bà ta đã dạy "<a href="thanh-ngu-ve-tien">Buôn tàu bán bè không bằng ăn dè hà tiện</a>". Trong thời buổi kinh tế thị trường như bây giờ thì rất khó ăn dè hà tiện vì có quá nhiều thứ mời gọi mình mua. Thứ nào trông cũng hay hết, mua về dùng sẽ được bao nhiêu điều tiện lợi, chỉ có một điều hại là không kịp <a href="/huu-ich/tich-luy">giàu trước khi già</a> &#x1f609;.</p>
+<p>Theo chương trình TV <i>Brain Games: Will You Make a Million</i> trong National Geographic Channel, công thức của sự giàu có là</p>
+<div class="title">Giàu có = Thu nhập - Chi tiêu + Đầu tư</div>
+<div class="flright"><div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</div><amp-img alt="Sự giàu có" src="/images/CaseofMoney.jpg" width="324" height="243" layout="responsive"></amp-img></a>
+</div>
+<p>Hai điểm mấu chốt của công thức trên là:</p>
+<ol><li>Chi tiêu ít hơn thu nhập</li>
+<li>Để tiền vào nơi <a href="/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">sinh lợi tốt</a>, lợi nhuận sinh ra chính là thu nhập thụ động (thu nhập mà không tốn công sức). Thu nhập thụ động tăng dần đến một lúc nào đó nó lớn hơn chi tiêu thì trở nên có của ăn suốt đời không hết. Nơi sinh lợi tốt là nơi có những người có tài điều khiển đồng tiền, loại người số 2 ở trên.</li>
+</ol>
+<p>Có một <a href="/huu-ich/ke-hoach-tai-chinh/">chương trình máy tính</a> giúp mỗi người tự vạch ra lộ trình làm giàu. Bạn có thể giàu chậm: khi bắt đầu về hưu mới đạt đến mức có của ăn suốt đời không hết, có của để lại cho con cháu khi nhắm mắt xuôi tay. Bạn hoàn toàn tự chọn lúc nào thì giàu theo cách này, việc làm giàu chậm nằm trong khả năng của mọi người.
+<br>Dù sao thì giàu chậm cũng vẫn còn giàu hơn 90% người già ờ Việt Nam rồi.</p>
+<p>Sự giàu có có tính tương đối vậy có cách gì để so sánh mức độ giàu tương đối, mức độ giàu sớm hay trễ không? Hãy xem trang <a href="do-giau">đo độ giàu</a>!</p>
+<p>Xem thêm <a href="https://www.getrichslowly.org/blog/" target='_blank'>Get Rich Slowly</a></p>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/huu-ich/chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
+<br>* <a href="/huu-ich/tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
+<br>* <a href="/huu-ich/ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
+<br>* <a href="/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
+<br>* <a href="thanh-ngu-ve-tien">Các thành ngữ liên quan đến tiền</a>
+<br>* <a href="do-giau">Đo độ giàu như thế nào?</a>
+<br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133515857462669312" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375546082611006" rel="nofollow" target="_blank">Facebook</a></div>
+
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -258,28 +281,6 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-
-<p>Theo chương trình TV <i>Brain Games: Will You Make a Million</i> trong National Geographic Channel, công thức của sự giàu có là</p>
-<div class="title">Giàu có = Thu nhập - Chi tiêu + Đầu tư</div>
-<div class="flright"><div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</div><amp-img alt="Sự giàu có" src="/images/CaseofMoney.jpg" width="324" height="243" layout="responsive"></amp-img></a>
-</div>
-<p>Hai điểm mấu chốt của công thức trên là:</p>
-<ol><li>Chi tiêu ít hơn thu nhập</li>
-<li>Để tiền vào nơi <a href="/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">sinh lợi tốt</a>, lợi nhuận sinh ra chính là thu nhập thụ động (thu nhập mà không tốn công sức). Thu nhập thụ động tăng dần đến một lúc nào đó nó lớn hơn chi tiêu thì trở nên có của ăn suốt đời không hết. Nơi sinh lợi tốt là nơi có những người có tài điều khiển đồng tiền, loại người số 2 ở trên.</li>
-</ol>
-<p>Có một <a href="/huu-ich/ke-hoach-tai-chinh/">chương trình máy tính</a> giúp mỗi người tự vạch ra lộ trình làm giàu. Bạn có thể giàu chậm: khi bắt đầu về hưu mới đạt đến mức có của ăn suốt đời không hết, có của để lại cho con cháu khi nhắm mắt xuôi tay. Bạn hoàn toàn tự chọn lúc nào thì giàu theo cách này, việc làm giàu chậm nằm trong khả năng của mọi người.
-<br>Dù sao thì giàu chậm cũng vẫn còn giàu hơn 90% người già ờ Việt Nam rồi.</p>
-<p>Sự giàu có có tính tương đối vậy có cách gì để so sánh mức độ giàu tương đối, mức độ giàu sớm hay trễ không? Hãy xem trang <a href="do-giau">đo độ giàu</a>!</p>
-<p>Xem thêm <a href="https://www.getrichslowly.org/blog/" target='_blank'>Get Rich Slowly</a></p>
-<div class="todiscuss">
-Các bài liên quan:
-<br>* <a href="/huu-ich/chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
-<br>* <a href="/huu-ich/tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
-<br>* <a href="/huu-ich/ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
-<br>* <a href="/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
-<br>* <a href="thanh-ngu-ve-tien">Các thành ngữ liên quan đến tiền</a>
-<br>* <a href="do-giau">Đo độ giàu như thế nào?</a>
-<br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133515857462669312" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375546082611006" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
   <div class="footer">
